Fixed scroll shifting content to the left Changed top margins

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@ html{
   @apply text-[87.5%] md:text-[100%]
 }
 body{
-  @apply bg-base-background text-base-text;
+  @apply bg-base-background text-base-text w-screen;
   -webkit-font-smoothing: antialiased;
 }
 *{
